[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpnpy"
version = "3.0.1"
description = "Control an RPN calculator from Python."
authors = [
    { name = "Terry C. Jones", email = "terence.jones@charite.de" },
    { name = "Nícolas F. R. A. Prado"}
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["python", "reverse", "polish", "calculator"]
dependencies = [
    "engineering_notation",
    "gnureadline>=8.2.13",
    "rich>=14.2.0",
    "textual>=0.82.0",
]

[project.urls]
Homepage = "https://github.com/terrycojones/rpnpy"
Repository = "https://github.com/terrycojones/rpnpy"
Download = "https://github.com/terrycojones/rpnpy"

[project.scripts]
rpnpy = "rpnpy.cli:main"

[dependency-groups]
dev = [
    "nox>=2025.10.16",
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rpnpy"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "UP031",  # Percent-style string formatting.
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
